refactor location; change routingProvider; fix scrolling issue; CHANG CONFIG
refactor location (cleanup, extract geoUtils );
add provider pattern for routing service;
change routingProvider to YOURS;
fix issue: pointer dislocated when location-list is scrolled;
some minor cleanups;
ATTENTION: there are changes to the app*.config.js files (see
appConfig.base.js)

--- a/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
+++ b/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
@@ -18,6 +18,9 @@
   background: none;
   background-color: #fba21c;
 }
+.ui-slider .ui-slider-handle:focus {
+  outline: none;
+}
 /*
 .ui-slider .ui-slider-range {
 	position: relative;
