--- a/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.less
+++ b/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.less
@@ -22,7 +22,11 @@
   border: none;
   background: none;
   background-color: @accent1;
+
 }
+  .ui-slider .ui-slider-handle:focus {
+      outline: none;  
+  }
 
 /*
 .ui-slider .ui-slider-range {
