--- a/onYOURway/App/_styles/_onYOURway.less
+++ b/onYOURway/App/_styles/_onYOURway.less
@@ -649,6 +649,17 @@ nav .dropdown-toggle:hover:after {
 
 /*#endregion searchbar*/
 
+/*#region forms */
+
+.oyw-input-list {
+  list-style: none;
+} 
+.oyw-input-list > li:before {
+    content: none;
+}
+
+/*#endregion forms */
+
 /*#region controls */
 
 /*.loader {
