--- a/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
+++ b/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
@@ -1,7 +1,7 @@
-/*colors*/
+﻿/*colors*/
 /***************************/
 /* Boostrap overrides      */
-/*#region jQueryUI slider*/
+/*# sourceMappingURL=_onYOURway.css.map */
 .ui-slider {
   background: none;
   background-color: #f0f0f0;
@@ -78,8 +78,8 @@
 		overflow: visible;
 	}
 */
-/*#endregion jQueryUI slider (fix)*/
-/*#region theme */
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 .gender {
   opacity: 0.5;
 }
@@ -215,8 +215,8 @@ ol {
   border-bottom: 3px solid #fba21c;
   margin-bottom: 10px;
 }
-/*#endregion theme */
-/*#region layout */
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 /*body.slide-active {
 	overflow-x: hidden;
 }
@@ -333,7 +333,7 @@ form > .row {
 .align-right {
   padding-right: 0;
 }
-/*#region responsive tweaks*/
+/*# sourceMappingURL=_onYOURway.css.map */
 /* un fix the navbar when active so that all the menu items are accessible */
 /*.navbar.navbar-fixed-top.slide-active {
 	position: relative;
@@ -407,9 +407,9 @@ form > .row {
   /* lg */
 }
 /* lg */
-/*#endregion responsive tweaks*/
-/*#endregion layout */
-/*#region nav */
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 .navbar {
   border-top: none;
   border-bottom: 1px solid #f1f1f1;
@@ -548,8 +548,8 @@ nav .dropdown-toggle:hover:after {
     left: 92%;
   }
 }
-/*#endregion nav */
-/*#region searchbar*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 #searchbar {
   position: absolute;
   z-index: 999;
@@ -595,7 +595,6 @@ nav .dropdown-toggle:hover:after {
   }
 }
 /* xs & sm */
-<<<<<<< HEAD:onYOURway/App/_styles/_onYOURway.css
 /*# sourceMappingURL=_onYOURway.css.map */
 /*# sourceMappingURL=_onYOURway.css.map */
 .oyw-input-list {
@@ -606,10 +605,6 @@ nav .dropdown-toggle:hover:after {
 }
 /*# sourceMappingURL=_onYOURway.css.map */
 /*# sourceMappingURL=_onYOURway.css.map */
-=======
-/*#endregion searchbar*/
-/*#region controls */
->>>>>>> e55cef71432ac12f015559d6bb9f5248285dc068:onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
 /*.loader {
 	z-index: 200;
 	visibility: hidden;
@@ -693,8 +688,8 @@ nav .dropdown-toggle:hover:after {
   position: absolute;
   margin-left: -0.5em;
 }
-/*#endregion controls */
-/*#region map*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 #map {
   position: absolute;
   top: 50px;
@@ -731,8 +726,8 @@ path.oyw-map-pointer {
   border-radius: 5px;
   border-width: 2px !important;
 }
-/*#endregion map*/
-/*#region locationList */
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 #locationList {
   display: none;
   position: absolute;
@@ -849,8 +844,8 @@ path.oyw-map-pointer {
     width: 100%;
   }
 }
-/*#endregion locationList */
-/*#region locationDetails*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 #ventureDetails {
   display: none;
   position: absolute;
@@ -928,8 +923,8 @@ path.oyw-map-pointer {
     width: 100%;
   }
 }
-/*#endregion locationDetails*/
-/*#region shopping list*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 .oyw-bg-overlay {
   position: absolute;
   top: 0;
@@ -951,13 +946,13 @@ path.oyw-map-pointer {
   text-decoration: line-through;
   opacity: 0.5;
 }
-/*#endregion shopping list*/
-/*#region owl-carousel*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 #idee.owl-carousel {
   overflow: hidden;
 }
-/*#endregion owl-carousel*/
-/*#region media content*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 .video-container {
   position: relative;
   padding: 30px 0 56.25% 0;
@@ -973,8 +968,8 @@ path.oyw-map-pointer {
   width: 100%;
   height: 100%;
 }
-/*#endregion media content*/
-/*#region tour (introjs)*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
 .introjs-helperNumberLayer {
   position: absolute;
   top: -3px;
@@ -1007,4 +1002,5 @@ a.introjs-button :active {
   text-decoration: none;
   outline: none;
 }
-/*#endregion tour (introjs)*/
+/*# sourceMappingURL=_onYOURway.css.map */
+/*# sourceMappingURL=_onYOURway.css.map */
