--- a/onYOURway/Views/Home/Index.cshtml
+++ b/onYOURway/Views/Home/Index.cshtml
@@ -28,6 +28,7 @@
 
   @Styles.Render("~/styles")
   @Styles.Render("~/themes/onYOURway")
+  @Styles.Render("~/themes/vonMorgen")
 
   <!-- Browser Tweaks -->
   <script type="text/javascript">
