--- a/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.less
+++ b/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.less
@@ -694,10 +694,10 @@ nav .dropdown-toggle:hover:after {
 		text-decoration: none;
 	}
 
-	.oyw-btn-close:hover {
+	.oyw-btn-close:hover, .leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover {
 		opacity: 1;
-		background-color: @accent1;
-		color: #fff;
+		background-color: @accent1 !important;
+		color: #fff !important;
 	}
 
 .oyw-btn-slide {
@@ -800,14 +800,40 @@ path.oyw-map-pointer {
 	fill-opacity: 0.6;
 }
 
-.leaflet-control-container {
-	display: none;
+//leaflet style overrides
+
+.leaflet-left .leaflet-control {
+    margin-left: 18px;
+}
+.leaflet-top .leaflet-control {
+    margin-top: 20px;
+}
+.leaflet-control {
+    border-radius: 12px;
+    border-width: 2px !important;
+}
+.leaflet-bar {
+    box-shadow: none;
+    border: none;
 }
 
-.leaflet-control {
-	border-radius: 5px;
-	border-width: 2px !important;
+.leaflet-control-zoom-in, .leaflet-control-zoom-out {
+	width: 30px;
+	height: 30px;
+	border-radius: 15px !important;
+	outline: none;
+	color: #ccc !important;
+	opacity: 0.4;
+	vertical-align: central;
 }
+.leaflet-control-zoom-out {
+	margin-top: 5px;
+}
+
+/*.leaflet-control-attribution {
+	display: none;
+}*/
+
 
 /*#endregion map*/
 
