--- a/onYOURway/App/views/my/wizardNew.html
+++ b/onYOURway/App/views/my/wizardNew.html
@@ -1,5 +1,5 @@
-﻿<div class="page-background">
+﻿<!--<div class="page-background">-->
   <div class="container page" data-bind="compose: 'views/my/_locationWizard'">
 
   </div>
-</div>
+<!--</div>-->
