--- a/onYOURway/App/_styles/themes/onYOURway2/_onYOURway.less
+++ b/onYOURway/App/_styles/themes/onYOURway2/_onYOURway.less
@@ -1,6 +1,9 @@
 ﻿/*colors*/
 @accent1: #FBA21C;
-@accent2: #B3D236;
+@accent2: #A5C135;
+@accent3: #eeac49;
+@accent4: #B3D236;
+@selectedItem: #5f7d87;
 
 
 /***************************/
@@ -8,25 +11,27 @@
 
 /*#region jQueryUI slider*/
 .ui-slider {
-  background: none;
-  background-color: #f0f0f0;
+	background: none;
+	background-color: #f0f0f0;
 }
 
 .ui-slider-horizontal .ui-slider-handle {
-    top: -0.45em;
-    margin-left: -0.8em;
+	top: -0.45em;
+	margin-left: -0.8em;
 }
-.ui-slider .ui-slider-handle {
-  width: 1.6em; height: 1.6em;
-  border-radius: 18px;
-  border: none;
-  background: none;
-  background-color: @accent1;
 
+.ui-slider .ui-slider-handle {
+	width: 1.6em;
+	height: 1.6em;
+	border-radius: 18px;
+	border: none;
+	background: none;
+	background-color: @accent1;
 }
-  .ui-slider .ui-slider-handle:focus {
-      outline: none;  
-  }
+
+.ui-slider .ui-slider-handle:focus {
+	outline: none;
+}
 
 /*
 .ui-slider .ui-slider-range {
@@ -107,11 +112,11 @@ ul, ol {
 	list-style: none;
 }
 
-	.oyw-content-main li:before {
-		content: '●';
-		color: #f9a01b;
-		margin-right: 0.6em;
-	}
+.oyw-content-main li:before {
+	content: '●';
+	color: #f9a01b;
+	margin-right: 0.6em;
+}
 
 .list-group-item {
 	font-size: 15px;
@@ -125,7 +130,7 @@ ul, ol {
 }
 
 .oyw-chk-checked {
-	color: #a5c135;
+	color: @accent2;
 	margin-right: 7px;
 	font-weight: bold;
 }
@@ -137,12 +142,13 @@ ul, ol {
 
 .btn-success {
 	background-color: @accent2;
-	border-color: #a5c135;
+	border-color: @accent2;
 }
 
-	.btn-success:active, .btn-success:focus, .btn-success:hover {
-		background-color: #a5c135;
-	}
+.btn-success:active, .btn-success:focus, .btn-success:hover {
+	background-color: @accent4;
+	border-color: @accent2;
+}
 
 .btn-warning {
 	background-color: @accent1;
@@ -200,9 +206,9 @@ ul, ol {
 	border: none;
 }
 
-	.oyw-content header small {
-		color: #646464;
-	}
+.oyw-content header small {
+	color: #646464;
+}
 
 .badge-sup {
 	vertical-align: text-top;
@@ -282,17 +288,17 @@ form > .row {
 	overflow: hidden;
 }
 
-	.jumbotron, .oyw-content-main > article {
-		position: relative;
-		height: 590px;
-		padding: 100px 15px 20px 20px;
-	}
+.jumbotron, .oyw-content-main > article {
+	position: relative;
+	height: 590px;
+	padding: 100px 15px 20px 20px;
+}
 
-	.oyw-content-main > article {
-		overflow: auto;
-		margin-right: -15px;
-		padding-right: 30px;
-	}
+.oyw-content-main > article {
+	overflow: auto;
+	margin-right: -15px;
+	padding-right: 30px;
+}
 
 .jumbotron {
 	position: relative;
@@ -314,45 +320,47 @@ form > .row {
 	color: #2c2c2c;
 }
 
-	.jumbotron > * {
-		background-color: rgba(241, 241, 241, 0.6);
-	}
+.jumbotron > * {
+	background-color: rgba(241, 241, 241, 0.6);
+}
 
-	.jumbotron > h1, .jumbotron > h2, .jumbotron > h3, .jumbotron > h4 {
-		display: inline-block;
-		padding: 0.45em 20px 0.45em 20px;
-		font-weight: bold;
-		color: #464646;
-	}
+.jumbotron > h1, .jumbotron > h2, .jumbotron > h3, .jumbotron > h4 {
+	display: inline-block;
+	padding: 0.45em 20px 0.45em 20px;
+	font-weight: bold;
+	color: #464646;
+}
 
-	.jumbotron > h1 {
-		padding: 0.4em 0.6em 0.4em 30px;
-	}
+.jumbotron > h1 {
+	padding: 0.4em 0.6em 0.4em 30px;
+}
 
-	.jumbotron > h2 {
-		font-size: 42px;
-	}
+.jumbotron > h2 {
+	font-size: 42px;
+}
 
-	.jumbotron > h3 {
-		font-size: 30px;
-	}
+.jumbotron > h3 {
+	font-size: 30px;
+}
 
-	.jumbotron > p {
-		position: absolute;
-		left: 15%;
-		bottom: -15px;
-		width: 70%;
-		padding: 0.5em 20px 0.65em 20px;
-	}
+.jumbotron > p {
+	position: absolute;
+	left: 15%;
+	bottom: -15px;
+	width: 70%;
+	padding: 0.5em 20px 0.65em 20px;
+}
 
 .no-padding {
 	padding: 0 !important;
 }
+
 .align-left {
-  padding-left: 0;
+	padding-left: 0;
 }
+
 .align-right {
-  padding-right: 0;
+	padding-right: 0;
 }
 
 /*#region responsive tweaks*/
@@ -380,10 +388,10 @@ form > .row {
 		width: 100%;
 	}
 
-		.container > .navbar-header {
-			margin-left: 0;
-			margin-right: 0;
-		}
+	.container > .navbar-header {
+		margin-left: 0;
+		margin-right: 0;
+	}
 
 	.oyw-content-main {
 		height: auto;
@@ -497,14 +505,14 @@ form > .row {
 	background-color: rgba(255, 255, 255, 0.9);
 }
 
-	.nav-pills > li > a[href^='#/'] {
-		color: #a8a8a8;
-	}
+.nav-pills > li > a[href^='#/'] {
+	color: #a8a8a8;
+}
 
-	.dropdown-menu > li > a:hover, .nav-pills > li > a:hover {
-		background-color: #f1f1f1;
-		color: #5a5a5a;
-	}
+.dropdown-menu > li > a:hover, .nav-pills > li > a:hover {
+	background-color: #f1f1f1;
+	color: #5a5a5a;
+}
 
 nav .dropdown-toggle:hover:after {
 	content: "▼";
@@ -527,14 +535,14 @@ nav .dropdown-toggle:hover:after {
 	background-color: @accent2;
 }
 
-	.dropdown-menu > li > a:focus, .nav-pills > li > a:active, .nav-pills > li.active > a:active {
-		background-color: @accent1;
-		color: #fff;
-	}
+.dropdown-menu > li > a:focus, .nav-pills > li > a:active, .nav-pills > li.active > a:active {
+	background-color: @accent1;
+	color: #fff;
+}
 
-	.nav-pills > li > a:focus, .nav-pills > li.active > a:focus {
-		outline: none;
-	}
+.nav-pills > li > a:focus, .nav-pills > li.active > a:focus {
+	outline: none;
+}
 
 .navbar li .badge {
 	position: absolute;
@@ -579,18 +587,18 @@ nav .dropdown-toggle:hover:after {
 		z-index: 0;
 	}
 
-		.navbar nav {
-			padding-top: 40px !important;
-		}
+	.navbar nav {
+		padding-top: 40px !important;
+	}
 
-		/*.navbar-collapse.collapse {
+	/*.navbar-collapse.collapse {
 		height: 100% !important;
 	}*/
 
-		.navbar > .container {
-			background-color: #ffffff;
-			color: #000000;
-		}
+	.navbar > .container {
+		background-color: #ffffff;
+		color: #000000;
+	}
 
 	#map.menu-open, .page.menu-open {
 		left: 92%;
@@ -613,12 +621,12 @@ nav .dropdown-toggle:hover:after {
 	transition: 0.3s ease-in-out;
 }
 
-	#searchbar.open {
-		top: 51px;
-	}
+#searchbar.open {
+	top: 51px;
+}
 
 #search-adv {
-  position: relative;
+	position: relative;
 	border-top: 4px solid @accent1;
 	padding: 20px;
 	border-radius: 0 0 4px 4px;
@@ -626,28 +634,28 @@ nav .dropdown-toggle:hover:after {
 	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176);
 }
 
-	#search-page label, #search-adv label {
-		margin-top: 10px;
-	}
+#search-page label, #search-adv label {
+	margin-top: 10px;
+}
 
-	#search-page section, #search-adv section {
-		margin-bottom: 20px;
-	}
+#search-page section, #search-adv section {
+	margin-bottom: 20px;
+}
 
 #search-features button {
 	margin-bottom: 5px;
 }
 
 #addFeature {
-  /*display: inline-block;
+	/*display: inline-block;
   width: 120px;*/
-  height: 30px;
+	height: 30px;
 }
 
 @media (max-width: 991px) { /* xs & sm */
-  #searchbar {
-  	top: -714px;
-  }
+	#searchbar {
+		top: -714px;
+	}
 }
 /* xs & sm */
 
@@ -656,10 +664,11 @@ nav .dropdown-toggle:hover:after {
 /*#region forms */
 
 .oyw-input-list {
-  list-style: none;
-} 
+	list-style: none;
+}
+
 .oyw-input-list > li:before {
-    content: none;
+	content: none;
 }
 
 /*#endregion forms */
@@ -690,15 +699,15 @@ nav .dropdown-toggle:hover:after {
 	border-radius: 0 0 0 35px;
 }
 
-	.oyw-btn-close:hover, .oyw-btn-close:focus {
-		text-decoration: none;
-	}
+.oyw-btn-close:hover, .oyw-btn-close:focus {
+	text-decoration: none;
+}
 
-	.oyw-btn-close:hover, .leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover {
-		opacity: 1;
-		background-color: @accent1 !important;
-		color: #fff !important;
-	}
+.oyw-btn-close:hover, .leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover {
+	opacity: 1;
+	background-color: @accent1 !important;
+	color: #fff !important;
+}
 
 .oyw-btn-slide {
 	position: absolute;
@@ -711,11 +720,11 @@ nav .dropdown-toggle:hover:after {
 	z-index: 9;
 }
 
-	.oyw-btn-slide:hover {
-		opacity: 1;
-		background-color: @accent1;
-		color: #fff;
-	}
+.oyw-btn-slide:hover {
+	opacity: 1;
+	background-color: @accent1;
+	color: #fff;
+}
 
 .oyw-btn-slide-right {
 	right: 0;
@@ -730,36 +739,38 @@ nav .dropdown-toggle:hover:after {
 }
 
 .datepicker {
-  padding: 10px 15px;
+	padding: 10px 15px;
 }
 
 .datepicker table tr td {
-  width: 35px;
-  height: 35px;
+	width: 35px;
+	height: 35px;
 }
 
 .timeInputSlider {
-  width: 100%;
+	width: 100%;
 }
-  .timeInputSlider > .timeInput {
-    width: 65px;
-  }
-  .timeInputSlider > .timeSlider {
-    margin-left: 75px;
-    margin-top: 18px;
-    margin-right: 5px;
-  }
+
+.timeInputSlider > .timeInput {
+	width: 65px;
+}
+
+.timeInputSlider > .timeSlider {
+	margin-left: 75px;
+	margin-top: 18px;
+	margin-right: 5px;
+}
 /*.timeSlider {
   position: relative;
 }*/
-  .timeSlider > span {
-    color: #ccc;
-    font-size: 0.7em;
-    margin-top: -20px;
-    width: 1em;
-    position: absolute;
-    margin-left: -0.5em;
-  }
+.timeSlider > span {
+	color: #ccc;
+	font-size: 0.7em;
+	margin-top: -20px;
+	width: 1em;
+	position: absolute;
+	margin-left: -0.5em;
+}
 
 /*#endregion controls */
 
@@ -780,17 +791,17 @@ nav .dropdown-toggle:hover:after {
 	transition: 0.3s ease-in-out;
 }
 
-	#map.listOpen {
-		right: 310px;
-	}
+#map.listOpen {
+	right: 310px;
+}
 
-	#map.detailsOpen {
-		right: 525px;
-	}
+#map.detailsOpen {
+	right: 525px;
+}
 
-	#map.listOpen.detailsOpen {
-		right: 835px;
-	}
+#map.listOpen.detailsOpen {
+	right: 835px;
+}
 
 path.oyw-map-pointer {
 	stroke: #375662;
@@ -803,18 +814,21 @@ path.oyw-map-pointer {
 //leaflet style overrides
 
 .leaflet-left .leaflet-control {
-    margin-left: 18px;
+	margin-left: 18px;
 }
+
 .leaflet-top .leaflet-control {
-    margin-top: 20px;
+	margin-top: 20px;
 }
+
 .leaflet-control {
-    border-radius: 12px;
-    border-width: 2px !important;
+	border-radius: 12px;
+	border-width: 2px !important;
 }
+
 .leaflet-bar {
-    box-shadow: none;
-    border: none;
+	box-shadow: none;
+	border: none;
 }
 
 .leaflet-control-zoom-in, .leaflet-control-zoom-out {
@@ -826,6 +840,7 @@ path.oyw-map-pointer {
 	opacity: 0.4;
 	vertical-align: central;
 }
+
 .leaflet-control-zoom-out {
 	margin-top: 5px;
 }
@@ -855,18 +870,18 @@ path.oyw-map-pointer {
 	transition: 0.3s ease-in-out;
 }
 
-	#locationList.listOpen {
-		display: block;
-	}
+#locationList.listOpen {
+	display: block;
+}
 
-		#locationList.listOpen.detailsOpen {
-			right: 525px;
-		}
+#locationList.listOpen.detailsOpen {
+	right: 525px;
+}
 
-	#locationList ul {
-		position: relative;
-		padding: 0;
-	}
+#locationList ul {
+	position: relative;
+	padding: 0;
+}
 
 .locationInfo {
 	border: 1px 1px 1px 5px solid #f1f1f1;
@@ -882,28 +897,28 @@ path.oyw-map-pointer {
 	max-width: 350px;
 }
 
-	.locationInfo * {
-		margin: 0;
-	}
+.locationInfo * {
+	margin: 0;
+}
 
 .locationInfo-imageArea {
 	position: relative;
 	width: 51px;
 	height: 51px;
 	/*background-color: #cccccc;*/
-	background-color: #eeac49;
+	background-color: @accent3;
 	float: left;
 	/*margin: -8px 10px -1px -1px;*/
 	margin-right: 7px;
 	overflow: hidden;
 }
 
-	.locationInfo-imageArea > i {
-		position: absolute;
-		right: 12px;
-		top: 11px;
-		color: #f9f9f9;
-	}
+.locationInfo-imageArea > i {
+	position: absolute;
+	right: 12px;
+	top: 11px;
+	color: #f9f9f9;
+}
 
 .locationInfo-image {
 	position: relative;
@@ -932,12 +947,12 @@ path.oyw-map-pointer {
 }
 
 .locationInfo.isFeatured {
-	border-left-color: #70ad25;
+	border-left-color: @accent2;
 }
 
-	.locationInfo.isFeatured > .locationInfo-imageArea {
-		background-color: #90ad6d;
-	}
+.locationInfo.isFeatured > .locationInfo-imageArea {
+	background-color: @accent2;
+}
 
 .locationInfo.selected {
 	border-color: #375662;
@@ -951,21 +966,21 @@ path.oyw-map-pointer {
 
 
 .locationInfo.selected > .locationInfo-imageArea {
-	background-color: #5f7d87;
+	background-color: @selectedItem;
 }
 
 .locationInfo > i.detailsIndicator {
-  position: absolute;
-  right: 5px;
-  top: 13px;
-  color: #5f7d87;
-  opacity: 0.73;
-  display: none;
-  font-size: 1.8em;
+	position: absolute;
+	right: 5px;
+	top: 13px;
+	color: @selectedItem;
+	opacity: 0.73;
+	display: none;
+	font-size: 1.8em;
 }
 
 .locationInfo.selected > i.detailsIndicator {
-  display: block;
+	display: block;
 }
 
 @media (max-width: 767px) { /*xs*/
@@ -994,9 +1009,9 @@ path.oyw-map-pointer {
 	transition: 0.3s ease-in-out;
 }
 
-	#ventureDetails.detailsOpen {
-		display: block;
-	}
+#ventureDetails.detailsOpen {
+	display: block;
+}
 
 
 .ventureDetails-imageArea {
@@ -1036,24 +1051,24 @@ path.oyw-map-pointer {
 	list-style: none;
 }
 
-	.ventureDetails-taglist li {
-		padding-bottom: 0.2em;
-		margin-left: 0;
-	}
+.ventureDetails-taglist li {
+	padding-bottom: 0.2em;
+	margin-left: 0;
+}
 
 .ventureDetails-details {
 	margin-top: -10px;
 	padding: 0 20px 20px 20px;
 }
 
-	.ventureDetails-details > h4 {
-		display: inline-block;
-		font-size: 1.1em;
-		font-weight: bold;
-		color: #9b9b9b;
-		/*border-bottom: 2px solid #eeac49;*/
-		margin-bottom: 5px;
-	}
+.ventureDetails-details > h4 {
+	display: inline-block;
+	font-size: 1.1em;
+	font-weight: bold;
+	color: #9b9b9b;
+	/*border-bottom: 2px solid #eeac49;*/
+	margin-bottom: 5px;
+}
 
 .oyw-action-list {
 	list-style: none;
@@ -1086,9 +1101,9 @@ path.oyw-map-pointer {
 	transition: opacity linear 0.5s;
 }
 
-	.oyw-bg-overlay.visible {
-		opacity: 0.5;
-	}
+.oyw-bg-overlay.visible {
+	opacity: 0.5;
+}
 
 .oyw-todo-done {
 	text-decoration: line-through;
@@ -1100,7 +1115,7 @@ path.oyw-map-pointer {
 /*#region owl-carousel*/
 
 #idee.owl-carousel {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 /*#endregion owl-carousel*/
@@ -1114,54 +1129,55 @@ path.oyw-map-pointer {
 	overflow: hidden;
 }
 
-	.video-container iframe,
-	.video-container object,
-	.video-container embed {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-	}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /*#endregion media content*/
 
 /*#region tour (introjs)*/
 
 .introjs-helperNumberLayer {
-    position: absolute;
-    top: -3px;
-    left: -17px;
-    background: none;
-    background-color: @accent1;
-    padding: 0;
-    color: #FFF;
-    border: none;
-    text-align: center;
+	position: absolute;
+	top: -3px;
+	left: -17px;
+	background: none;
+	background-color: @accent1;
+	padding: 0;
+	color: #FFF;
+	border: none;
+	text-align: center;
 }
 
 .introjs-bullets ul li a.active {
-  background-color: @accent2;
+	background-color: @accent2;
 }
 
 .introjs-tooltip {
-    padding: 20px;
-    background-color: #f1f1f1;
-    min-width: 250px;
-    max-width: 400px;
-    border-radius: 3px;
+	padding: 20px;
+	background-color: #f1f1f1;
+	min-width: 250px;
+	max-width: 400px;
+	border-radius: 3px;
 }
 
 .introjs-arrow.top {
-  top: -13px;
-}
-.introjs-arrow {
-    border: 7px solid #FFF;
+	top: -13px;
 }
 
- a.introjs-button:focus, a.introjs-button :active  {
-  text-decoration: none;
-  outline: none;
+.introjs-arrow {
+	border: 7px solid #FFF;
+}
+
+a.introjs-button:focus, a.introjs-button :active {
+	text-decoration: none;
+	outline: none;
 }
 
 /*#endregion tour (introjs)*/
