--- a/onYOURway/App/_styles/themes/vonMorgen/_onYOURway.css
+++ b/onYOURway/App/_styles/themes/vonMorgen/_onYOURway.css
@@ -1,7 +1,7 @@
-﻿/*colors*/
+/*colors*/
 /***************************/
 /* Boostrap overrides      */
-
+/*#region jQueryUI slider*/
 .ui-slider {
   background: none;
   background-color: #f0f0f0;
@@ -78,8 +78,8 @@
 		overflow: visible;
 	}
 */
-
-
+/*#endregion jQueryUI slider (fix)*/
+/*#region theme */
 .gender {
   opacity: 0.5;
 }
@@ -215,8 +215,8 @@ ol {
   border-bottom: 3px solid #fba21c;
   margin-bottom: 10px;
 }
-
-
+/*#endregion theme */
+/*#region layout */
 /*body.slide-active {
 	overflow-x: hidden;
 }
@@ -333,7 +333,7 @@ form > .row {
 .align-right {
   padding-right: 0;
 }
-
+/*#region responsive tweaks*/
 /* un fix the navbar when active so that all the menu items are accessible */
 /*.navbar.navbar-fixed-top.slide-active {
 	position: relative;
@@ -407,17 +407,17 @@ form > .row {
   /* lg */
 }
 /* lg */
-
-
-
+/*#endregion responsive tweaks*/
+/*#endregion layout */
+/*#region forms */
 .oyw-input-list {
   list-style: none;
 }
 .oyw-input-list > li:before {
   content: none;
 }
-
-
+/*#endregion forms */
+/*#region controls */
 /*.loader {
 	z-index: 200;
 	visibility: hidden;
@@ -491,7 +491,7 @@ form > .row {
   margin-right: 5px;
 }
 /*.timeSlider {
-  position: relative;
+	position: relative;
 }*/
 .timeSlider > span {
   color: #ccc;
@@ -501,8 +501,8 @@ form > .row {
   position: absolute;
   margin-left: -0.5em;
 }
-
-
+/*#endregion controls */
+/*#region shopping list*/
 .oyw-bg-overlay {
   position: absolute;
   top: 0;
@@ -524,13 +524,13 @@ form > .row {
   text-decoration: line-through;
   opacity: 0.5;
 }
-
-
+/*#endregion shopping list*/
+/*#region owl-carousel*/
 #idee.owl-carousel {
   overflow: hidden;
 }
-
-
+/*#endregion owl-carousel*/
+/*#region media content*/
 .video-container {
   position: relative;
   padding: 30px 0 56.25% 0;
@@ -546,8 +546,8 @@ form > .row {
   width: 100%;
   height: 100%;
 }
-
-
+/*#endregion media content*/
+/*#region tour (introjs)*/
 .introjs-helperNumberLayer {
   position: absolute;
   top: -3px;
@@ -580,4 +580,5 @@ a.introjs-button :active {
   text-decoration: none;
   outline: none;
 }
-
+/*#endregion tour (introjs)*/
+/*# sourceMappingURL=_onYOURway.css.map */
