--- a/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.css
+++ b/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.css
@@ -1,4 +1,11 @@
 ﻿/*colors*/
+/** start shared overrides*/
+#mySiteList,
+#map,
+#mySiteCollector {
+  top: 85px !important;
+}
+/** end shared overrides*/
 body {
   background: none;
 }
@@ -65,7 +72,7 @@ a.explainable:hover span.explain {
   background-color: #656565;
   border-color: #000000;
 }
-
+/*# sourceMappingURL=_vonMorgen.css.map */
 #map {
   position: absolute;
   top: 85px;
@@ -102,4 +109,5 @@ path.oyw-map-pointer {
   border-radius: 5px;
   border-width: 2px !important;
 }
-
+/*# sourceMappingURL=_vonMorgen.css.map */
+/*# sourceMappingURL=_vonMorgen.css.map */
