--- a/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.less
+++ b/onYOURway/App/_styles/themes/vonMorgen/_vonMorgen.less
@@ -2,6 +2,12 @@
 @accent1: #FBA21C;
 @accent2: #B3D236;
 
+/** start shared overrides*/
+    #mySiteList, #map, #mySiteCollector {
+        top: 85px !important;
+    }
+/** end shared overrides*/
+
 body {
 		background: none;
 }
