--- a/onYOURway/App/views/vonMorgen/_map.html
+++ b/onYOURway/App/views/vonMorgen/_map.html
@@ -3,7 +3,7 @@
     <!--Map-->
     <div id="map" data-bind=" map: { initialize: location.initializeMap }
                           , ventures : { map: location.map, data: location.mapLocations }
-                          , css: { listOpen: showList }
+                          , css: { listOpen: showList, siteCollectorOpen: showSiteCollector }
                           ">
 
         <button class="btn oyw-btn-slide oyw-btn-slide-right" data-bind="click: location.toggleList">
